syntax = "proto3";

enum GridEvent {
    GetGridData = 0;
    GetGridBlocks = 1;
    GetFields = 10;
    UpdateField = 11;
    UpdateFieldTypeOption = 12;
    InsertField = 13;
    DeleteField = 14;
    SwitchToField = 20;
    DuplicateField = 21;
    MoveItem = 22;
    GetFieldTypeOption = 23;
    CreateFieldTypeOption = 24;
    NewSelectOption = 30;
    GetSelectOptionCellData = 31;
    UpdateSelectOption = 32;
    CreateRow = 50;
    GetRow = 51;
    DeleteRow = 52;
    DuplicateRow = 53;
    GetCell = 70;
    UpdateCell = 71;
    UpdateSelectOptionCell = 72;
    UpdateDateCell = 80;
}
